--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\Scripts\simulations\linkingSceneSim.cs" />
      <Compile Include="Assets\Scripts\simulations\settingPopulation.cs" />
      <Compile Include="Assets\Scripts\simulations\text.cs" />
+     <Compile Include="Assets\Scripts\simulations\tryparse.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
