--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\simulations\dataInput.cs" />
      <Compile Include="Assets\Scripts\simulations\linkingSceneSim.cs" />
      <Compile Include="Assets\Scripts\simulations\settingPopulation.cs" />
+     <Compile Include="Assets\Scripts\simulations\spreadCalc.cs" />
      <Compile Include="Assets\Scripts\simulations\text.cs" />
      <Compile Include="Assets\Scripts\simulations\tryparse.cs" />
  <Reference Include="UnityEngine.UI">
